# My_finance

./: README.md  pyproject.toml
my_finance/: db.sqlite3  manage.py
my_finance/my_finance/: asgi.py  settings.py  urls.py  wsgi.py
my_finance/theme/static_src/: tailwind.config.js
my_finance/theme/templates/: base.html
my_finance/transactions/: admin.py  models.py  urls.py  views.py
my_finance/transactions/migrations/: 0001_initial.py
my_finance/transactions/templates/transactions/: statistics.html  transactions.html
my_finance/user/: urls.py  views.py
my_finance/user/templates/: index.html
my_finance/user/templates/auth/: login.html  register.html
