[tool.poetry]
name = "my_finance"
version = "0.1.0"
description = ""
authors = ["Aleksandra0001 <104300297+Aleksandra0001@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
django-tailwind = "^3.4.0"
Faker = "^15.1.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
